Select Linked All + Seams fails to select seam bounded area #33784

Closed
opened 2013-01-06 14:19:26 +01:00 by Tobias Oelgarte · 6 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.04 64 bit

- Blender version with error, and version that worked ---

r56533

- Short description of error ---

Selecting only the desired area, bound by seams, fails with Select Linked All and Limit by Seams option enabled. (L = Works, Ctrl+L doesn't)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I appended an simple example file. Just press Ctrl+L and there will also faces selected that are not part of the seam bounded area.

%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.04 64 bit - Blender version with error, and version that worked --- r56533 - Short description of error --- Selecting only the desired area, bound by seams, fails with Select Linked All and Limit by Seams option enabled. (L = Works, Ctrl+L doesn't) - Steps for others to reproduce the error (preferably based on attached .blend file) --- I appended an simple example file. Just press Ctrl+L and there will also faces selected that are not part of the seam bounded area. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed. I do not know if this is by design but I'd also love to have both working%%%

%%%Confirmed. I do not know if this is by design but I'd also love to have both working%%%

%%%PS: I noticed a similar behavior in face select mode with the "Select More" operator. Just select one face of the default cube and then press Ctrl+Num Plus. I would expect five faces to be selected. But it also selects the opposite face as well (overall six/all faces). Or better said: It always selects a face from which all edges are selected due to its neighbors being selected. At minimum it needs two selected neighbors -> two selected, opposing edges -> face is also selected -> shouldn't happen. %%%

%%%PS: I noticed a similar behavior in face select mode with the "Select More" operator. Just select one face of the default cube and then press Ctrl+Num Plus. I would expect five faces to be selected. But it also selects the opposite face as well (overall six/all faces). Or better said: It always selects a face from which all edges are selected due to its neighbors being selected. At minimum it needs two selected neighbors -> two selected, opposing edges -> face is also selected -> shouldn't happen. %%%

%%%fixed r53664

@Tobias. fixed r53665.%%%

%%%fixed r53664 @Tobias. fixed r53665.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Thank you!%%%

%%%Thank you!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33784
No description provided.