fix [#33784] Select Linked All + Seams fails to select seam bounded area

was incorrectly flushing vertex selection.